logs/location-extractor.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/beautifulsoup4-4.6.0.dist-info'...
Listing './lib/python3.5/site-packages/broth'...
Listing './lib/python3.5/site-packages/broth-0.8.egg-info'...
Listing './lib/python3.5/site-packages/bs4'...
Listing './lib/python3.5/site-packages/bs4/builder'...
Listing './lib/python3.5/site-packages/bs4/tests'...
Listing './lib/python3.5/site-packages/date_extractor'...
Listing './lib/python3.5/site-packages/date_extractor/data'...
Listing './lib/python3.5/site-packages/date_extractor/data/months_verbose'...
Listing './lib/python3.5/site-packages/date_extractor/tests'...
Listing './lib/python3.5/site-packages/date_extractor-3.8.egg-info'...
Listing './lib/python3.5/site-packages/docx'...
Listing './lib/python3.5/site-packages/docx/dml'...
Listing './lib/python3.5/site-packages/docx/enum'...
Listing './lib/python3.5/site-packages/docx/image'...
Listing './lib/python3.5/site-packages/docx/opc'...
Listing './lib/python3.5/site-packages/docx/opc/parts'...
Listing './lib/python3.5/site-packages/docx/oxml'...
Listing './lib/python3.5/site-packages/docx/oxml/text'...
Listing './lib/python3.5/site-packages/docx/parts'...
Listing './lib/python3.5/site-packages/docx/styles'...
Listing './lib/python3.5/site-packages/docx/templates'...
Listing './lib/python3.5/site-packages/docx/text'...
Listing './lib/python3.5/site-packages/language_detector'...
Listing './lib/python3.5/site-packages/language_detector/prep'...
Listing './lib/python3.5/site-packages/language_detector/tests'...
Listing './lib/python3.5/site-packages/language_detector-4.2.egg-info'...
Listing './lib/python3.5/site-packages/location_extractor'...
Listing './lib/python3.5/site-packages/location_extractor/keywords'...
Listing './lib/python3.5/site-packages/location_extractor/keywords/Arabic'...
Listing './lib/python3.5/site-packages/location_extractor/keywords/English'...
Listing './lib/python3.5/site-packages/location_extractor/keywords/Spanish'...
Listing './lib/python3.5/site-packages/location_extractor/letters'...
Listing './lib/python3.5/site-packages/location_extractor/tests'...
Listing './lib/python3.5/site-packages/location_extractor-7.6.egg-info'...
Listing './lib/python3.5/site-packages/lxml'...
Listing './lib/python3.5/site-packages/lxml/html'...
Listing './lib/python3.5/site-packages/lxml/includes'...
Listing './lib/python3.5/site-packages/lxml/includes/libexslt'...
Listing './lib/python3.5/site-packages/lxml/includes/libxml'...
Listing './lib/python3.5/site-packages/lxml/includes/libxslt'...
Listing './lib/python3.5/site-packages/lxml/isoschematron'...
Listing './lib/python3.5/site-packages/lxml/isoschematron/resources'...
Listing './lib/python3.5/site-packages/lxml/isoschematron/resources/rng'...
Listing './lib/python3.5/site-packages/lxml/isoschematron/resources/xsl'...
Listing './lib/python3.5/site-packages/lxml/isoschematron/resources/xsl/iso-schematron-xslt1'...
Listing './lib/python3.5/site-packages/lxml-4.1.1.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/python_docx-0.8.6.egg-info'...
Listing './lib/python3.5/site-packages/pytz'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Africa'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/America'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/America/Argentina'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/America/Indiana'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/America/Kentucky'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/America/North_Dakota'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Antarctica'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Arctic'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Asia'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Atlantic'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Australia'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Brazil'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Canada'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Chile'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Etc'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Europe'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Indian'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Mexico'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Pacific'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/US'...
Listing './lib/python3.5/site-packages/pytz-2017.3.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/table_extractor'...
Compiling './lib/python3.5/site-packages/table_extractor/__init__.py'...
***   File "./lib/python3.5/site-packages/table_extractor/__init__.py", line 31
    if debug: print "starting extract_tables"
                                            ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/table_extractor-0.7.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
